--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,33 @@
-# Require the CMake version matching what is included in the latest LTS version
-# of Ubuntu, which at the time of writing is 22.04.
-cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.13)
+
+# Pull in SDK (must be before project)
+include(pico_sdk_import.cmake)
 
 # TODO: Define a good project in the line below. If applicable, list other
 # languages in this project managed by CMake.
-project(ProjectTitle
-  VERSION 1.0
-  LANGUAGES C
-)
+project(TicTacToe C CXX ASM)
 
-# Use the latest C standard supported by Clang and LLVM in the latest LTS
-# version of Ubuntu.
-set(CMAKE_C_STANDARD 17)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+
+if (PICO_SDK_VERSION_STRING VERSION_LESS "1.3.0")
+    message(FATAL_ERROR "Raspberry Pi Pico SDK version 1.3.0 (or later) required. Your version is ${PICO_SDK_VERSION_STRING}")
+endif()
+
+# Initialize the SDK
+pico_sdk_init()
+
+add_compile_options(-Wall
+        -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
+        -Wno-unused-function # we have some for the docs that aren't called
+        )
+if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
+    add_compile_options(-Wno-maybe-uninitialized)
+endif()
+
+# Include the source files.
+add_subdirectory(src)
+
 
 set(CMAKE_C_FLAGS "-Wall -Wextra")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic")
@@ -34,14 +50,11 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
 # instead. If that file is not present, clang-tidy will be of limited help.
 set(CMAKE_C_CLANG_TIDY "clang-tidy")
 
-# Include the source files.
-add_subdirectory(src)
-
 # In current courses that teach C, we use the Criterion testing framework. If
 # If you want to use a different framework, or if you want to skip testing
 # entirely (not recommended), change the lines below.
-include(CTest)
-find_library(CRITERION criterion REQUIRED)
-set(CRITERION_FLAGS --verbose -j1)
+# include(CTest)
+# find_library(CRITERION criterion REQUIRED)
+# set(CRITERION_FLAGS --verbose -j1)
 
-add_subdirectory(test)
+# add_subdirectory(test)
