--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,8 +13,10 @@ add_executable(blink
         blink.c
         )
 
-# pull in common dependencies
-target_link_libraries(blink pico_stdlib)
+target_link_libraries(blink
+        pico_stdlib              # for core functionality
+        pico_cyw43_arch_none     # we need Wifi to access the GPIO, but we don't need anything else
+        )
 
 # create map/bin/hex file etc.
 pico_add_extra_outputs(blink)
