Was previously building, now is not

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,24 +9,27 @@
 # library is used only in function bodies (PRIVATE), only in function
 # signatures/types (INTERFACE), or both (PUBLIC).
 
-add_library(bt_server
+add_executable(tic_tac_toe_main_server
+    pico_main.c 
     bt_server.c
 )
-target_link_libraries(bt_server
-    pico_stdlib
-)
+target_link_libraries(tic_tac_toe_main_server
+  pico_stdlib
+  pico_btstack_ble
+  pico_btstack_cyw43
+  pico_cyw43_arch_none
+  hardware_adc
+# bt_server
+    # pico_stdlib
+    # pico_btstack_ble
+    # pico_btstack_cyw43
+    # pico_cyw43_arch_none
+    # hardware_flash
+    # hardware_exception
+    # hardware_adc
 
-add_executable(tic_tac_toe_main
-    pico_main.c
-)
-target_link_libraries(tic_tac_toe_main
-    bt_server
-    pico_stdlib
-    pico_btstack_ble
-    pico_btstack_cyw43
-    pico_cyw43_arch_none
-    hardware_flash
-    hardware_exception
+
+    # pico_cyw43_arch_poll
     # pico_stdlib
     # pico_btstack_ble
     # pico_btstack_cyw43
@@ -37,11 +40,8 @@ target_link_libraries(tic_tac_toe_main
 )
 
 # For btstack_config.h
-target_include_directories(tic_tac_toe_main PRIVATE
+target_include_directories(tic_tac_toe_main_server PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}
-)
-target_compile_definitions(tic_tac_toe_main PRIVATE
-  RUNNING_AS_CLIENT=1
 )
 
 set(BTSTACK_ROOT ${PICO_SDK_PATH}/lib/btstack)
@@ -50,6 +50,29 @@ set(BTSTACK_3RD_PARTY_PATH ${BTSTACK_ROOT}/3rd-party)
 # List of examples from btstack
 include(${BTSTACK_ROOT}/example/CMakeLists.txt)
 
-pico_btstack_make_gatt_header(tic_tac_toe_main PRIVATE "${CMAKE_CURRENT_LIST_DIR}/main.gatt")
+pico_btstack_make_gatt_header(tic_tac_toe_main_server PRIVATE "${CMAKE_CURRENT_LIST_DIR}/main.gatt")
 
-pico_add_extra_outputs(tic_tac_toe_main)
+pico_add_extra_outputs(tic_tac_toe_main_server)
+
+
+
+
+add_executable(tic_tac_toe_main_client
+    bt_client.c
+    )
+target_link_libraries(tic_tac_toe_main_client
+    pico_stdlib
+    pico_btstack_ble
+    pico_btstack_cyw43
+    pico_cyw43_arch_none
+    hardware_adc
+    )
+target_include_directories(tic_tac_toe_main_client PRIVATE
+    ${CMAKE_CURRENT_LIST_DIR} # For btstack config
+    )
+target_compile_definitions(tic_tac_toe_main_client PRIVATE
+    RUNNING_AS_CLIENT=1
+)
+
+pico_add_extra_outputs(tic_tac_toe_main_client)
+
