Clean up CMakelists, ready for merge

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,12 +53,12 @@ target_include_directories(bt_client PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}
 )
 
-
-add_executable(tic_tac_toe_main_server
-    player_0.c
+# Player 0
+add_executable(player_0
+    pico_tic_tac_toe.c
 )
 
-target_link_libraries(tic_tac_toe_main_server
+target_link_libraries(player_0
   pico_stdlib
   pico_btstack_ble
   pico_btstack_cyw43
@@ -66,54 +66,30 @@ target_link_libraries(tic_tac_toe_main_server
   bt_server
   player_0_gatt
   bt_client
-# bt_server
-    # pico_stdlib
-    # pico_btstack_ble
-    # pico_btstack_cyw43
-    # pico_cyw43_arch_none
-    # hardware_flash
-    # hardware_exception
-    # hardware_adc
-
-
-    # pico_cyw43_arch_poll
-    # pico_stdlib
-    # pico_btstack_ble
-    # pico_btstack_cyw43
-    # pico_cyw43_driver
-    # hardware_flash
-    # hardware_exception
-    # rp2_common
 )
 
 # For btstack_config.h
-target_include_directories(tic_tac_toe_main_server PRIVATE
+target_include_directories(player_0 PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}
 )
-# Set pico as client
-target_compile_definitions(tic_tac_toe_main_server PRIVATE
+# Set pico as player 0
+target_compile_definitions(player_0 PRIVATE
     RUNNING_AS_CLIENT=1
     PLAYER_0
 )
 
-pico_enable_stdio_usb(tic_tac_toe_main_server 1)
-pico_enable_stdio_uart(tic_tac_toe_main_server 0)
+# Debug printing over usb
+pico_enable_stdio_usb(player_0 1)
+pico_enable_stdio_uart(player_0 0)
 
-set(BTSTACK_ROOT ${PICO_SDK_PATH}/lib/btstack)
-set(BTSTACK_3RD_PARTY_PATH ${BTSTACK_ROOT}/3rd-party)
+pico_add_extra_outputs(player_0)
 
-# List of examples from btstack
-include(${BTSTACK_ROOT}/example/CMakeLists.txt)
-
-# pico_btstack_make_gatt_header(tic_tac_toe_main_server PRIVATE "${CMAKE_CURRENT_LIST_DIR}/main.gatt")
-
-pico_add_extra_outputs(tic_tac_toe_main_server)
-
-add_executable(tic_tac_toe_main_client
-    player_0.c
+# Player 1
+add_executable(player_1
+pico_tic_tac_toe.c
 )
 
-target_link_libraries(tic_tac_toe_main_client
+target_link_libraries(player_1
     pico_stdlib
     pico_btstack_ble
     pico_btstack_cyw43
@@ -122,19 +98,19 @@ target_link_libraries(tic_tac_toe_main_client
     player_1_gatt
     bt_server
     )
-target_include_directories(tic_tac_toe_main_client PRIVATE
+target_include_directories(player_1 PRIVATE
     ${CMAKE_CURRENT_LIST_DIR} # For btstack config
     )
 
-# Debug printing over usb
-# Set pico as client
-target_compile_definitions(tic_tac_toe_main_client PRIVATE
+
+# Set pico as player 0
+target_compile_definitions(player_1 PRIVATE
     RUNNING_AS_CLIENT=1
     PLAYER_1
 )
 
-pico_enable_stdio_usb(tic_tac_toe_main_client 1)
-pico_enable_stdio_uart(tic_tac_toe_main_client 0)
+# Debug printing over usb
+pico_enable_stdio_usb(player_1 1)
+pico_enable_stdio_uart(player_1 0)
 
-pico_add_extra_outputs(tic_tac_toe_main_client)
-
+pico_add_extra_outputs(player_1)
